sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort() {
^AlgCocktailSort1:18: error: Missing closing brace `}' assumed here
} 
^